Revision history for WWW::Mechanize

Mech now has its own mailing list at Google Groups:
http://groups.google.com/group/www-mechanize-users

1.68        Fri Apr 22 01:10:40 EST 2011
========================================
No changes from 1.67_01

1.67_01
========================================
[ANNOUNCE]
As of this release, Jesse Vincent has taken over maintenance of
WWW-Mechanize.  The project's repository can be found at:

 https://github.com/bestpractical/www-mechanize


[FIXED]
Added prereq for HTML::TreeBuilder.


1.66        Fri Sep 10 16:25:44 CDT 2010
========================================
[FIXED]
Fixed prerequisites on HTTP::Server::Simple on Windows.

DNS checks in t/autocheck.t and t/local/failure.t improved.  Thanks,
Schwern.

[ENHANCEMENTS]
New $mech->text method returns the text from your HTML page.  The
exact rendering of this text is simply removing all the HTML
tags, but this will change. It's pretty ugly.  If anyone wants to
work on a better-looking text dump, I'd love to see it.

Added mech-dump --text.

[DOCUMENTATION]
Improvements to the docs explaining explicitly about the subclassed
methods we inherit from LWP::UserAgent.  Thanks, Lyle Hopkins!


1.64        Thu Jul  1 10:41:00 CDT 2010
========================================
[THINGS THAT MAY BREAK YOUR CODE]
If you've been accessing $mech->{forms} or $mech->{form} values
directly, instead of going through the $mech->forms or $mech->current_form
accessors, respectively, then this version of Mech will break your
code.

[ENHANCEMENTS]
Parsing of forms has been delayed until they're actually needed.
If don't use forms on a page, you'll no longer waste time and memory
parsing them.

$mech->title now caches the title of the page after parsing the
page to find it.

mech-dump now takes a --cookie-file parameter for keeping cookies
between calls.  Thanks, Damien Clark.


[DOCUMENTATION]
Typo fixes.


1.62        Sat Apr 10 23:10:07 CDT 2010
========================================
[FIXED]