@@ -3,6 +3,10 @@ Revision history for WWW::Mechanize
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
+[CHANGES]
+
+The test suite for the local tests was updated
+
 1.68        Fri Apr 22 01:10:40 EST 2011
 ========================================
 No changes from 1.67_01
